# osti

./: .gitignore  README.md  TODO.md  architecture.html  pyproject.toml
.github/workflows/: release.yml
scripts/: generate.py
